--- a/public/fontend/css/style.css
+++ b/public/fontend/css/style.css
@@ -459,6 +459,7 @@ nav ul li a {
   background: #f7f7f7;
   padding-bottom: 60px;
   position: relative;
+  padding-top: 100px
 }
 
 #journal-blog {
