--- a/public/fontend/css/responsive.css
+++ b/public/fontend/css/responsive.css
@@ -3,7 +3,15 @@
  */
 
 @media (min-width: 1200px) {
+  
+}
 
+@media (min-width: 992px) {
+  #header {
+  background: url("../images/desktop.jpg") repeat scroll center center / cover;
+  height: 100vh;
+  width: 100%;
+  }
 }
 
 /** Width between 992px to 1199px
@@ -11,7 +19,6 @@
  */
 
 @media (min-width: 992px) and (max-width: 1199px) {
-  
 }
 
 /** Width between 768px to 991px
@@ -23,6 +30,7 @@
   nav {
     padding: 10px 15px;
   }
+ 
   .nav-menu {
     margin-top: 40px;
     display: none;
