--- a/public/fontend/css/style.css
+++ b/public/fontend/css/style.css
@@ -1,14 +1,3 @@
-
-/*
-  Theme Name: Folio
-  Theme URL: https://bootstrapmade.com/folio-bootstrap-portfolio-template/
-  Author: BootstrapMade.com
-  Author URL: https://bootstrapmade.com
-*/
-
-/*  General Styling
-/*-----------------------------------------------------------------------------------*/
-
 body {
   background: #ffffff;
   color: #898989;
@@ -100,7 +89,24 @@ p {
   background: #b8a07e;
   color: #fff;
 }
-
+#btn_on_top {
+  display: none; 
+  position: fixed; 
+  bottom: 20px; 
+  right: 30px; 
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: #6c757d;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+  font-size: 18px;
+}
+#btn_on_top:hover {
+  background-color: #555;
+}
 .btn {
   background: #333;
   border: medium none;
